@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Fix postfile test to avoid default PerlIO layers
 
 0.001     2019-03-01 00:35:01 EST
   - First release
